Make ItemElement and ListPage playable

--- a/client/index.html
+++ b/client/index.html
@@ -446,6 +446,16 @@
                                 <button
                                     is="micro-button"
                                     type="button"
+                                    class="action"
+                                    data-run="play"
+                                >
+                                    <i class="fas fa-play"></i> Play
+                                </button>
+                            </li>
+                            <li>
+                                <button
+                                    is="micro-button"
+                                    type="button"
                                     class="listling-item-edit action"
                                     data-run="startEdit"
                                     data-shortcut="new Shortcut 'E'"
@@ -491,7 +501,7 @@
 
                 <div
                     class="listling-item-resource listling-item-mode-view"
-                    data-content="renderResource item.resource"
+                    data-content="resourceElem"
                 >
                 </div>
 
