Fix max duration and reduce max image size (playlist)

--- a/client/index.html
+++ b/client/index.html
@@ -612,6 +612,7 @@
 
         .listling-item-resource {
             --micro-link-max-height: calc((70ch - 2 * var(--micro-size-xs)) * 3 / 4);
+            --micro-link-max-height: calc((70ch - 2 * var(--micro-size-xs)) * 9 / 16);
             --micro-image-max-height: var(--micro-link-max-height);
             margin: var(--micro-size-xs) 0;
         }
