--- a/client/index.html
+++ b/client/index.html
@@ -208,8 +208,8 @@
                     <li>
                         <button type="button" class="link"><i class="fa fa-fw fa-bars"></i></button>
                         <ul is="micro-menu">
-                            <li>
-                                <button is="micro-button" type="button" class="listling-list-edit action"
+                            <li class="listling-list-edit">
+                                <button is="micro-button" type="button" class="action"
                                         data-run="startEdit" data-shortcut="new Shortcut 'E'">
                                     <i class="fa fa-pencil-alt"></i> Edit
                                 </button>
@@ -439,6 +439,7 @@
         listling-list-page.listling-list-presentation .listling-list-menu,
         listling-list-page.listling-list-presentation .listling-list-trash,
         listling-list-page.listling-list-presentation .listling-list-create-item,
+        listling-list-page:not(.listling-list-can-modify) .listling-list-edit,
         body:not(.micro-feature-es6-typed-array) .listling-list-subscribe,
         body:not(.micro-feature-service-workers) .listling-list-subscribe,
         body:not(.micro-feature-push) .listling-list-subscribe,
@@ -505,8 +506,8 @@
                 <ul is="micro-menu"
                     class="listling-item-menu micro-secondary listling-item-mode-view"
                 >
-                    <li>
-                        <button is="micro-button" type="button" class="listling-item-restore action"
+                    <li class="listling-item-restore">
+                        <button is="micro-button" type="button" class="action"
                                 data-run="restore" data-shortcut="new Shortcut 'R'">
                             <i class="fa fa-undo"></i> Restore
                         </button>
@@ -526,22 +527,22 @@
                                     <i class="fas fa-play"></i> Play
                                 </button>
                             </li>
-                            <li>
+                            <li class="listling-item-edit">
                                 <button
                                     is="micro-button"
                                     type="button"
-                                    class="listling-item-edit action"
+                                    class="action"
                                     data-run="startEdit"
                                     data-shortcut="new Shortcut 'E'"
                                 >
                                     <i class="fa fa-pencil-alt"></i> Edit
                                 </button>
                             </li>
-                            <li>
+                            <li class="listling-item-trash">
                                 <button
                                     is="micro-button"
                                     type="button"
-                                    class="listling-item-trash action"
+                                    class="action"
                                     data-run="trash"
                                     data-shortcut="new Shortcut 'T'"
                                 >
@@ -667,7 +668,8 @@
 
         listling-list-page:not(.listling-list-feature-check) [is=listling-item].listling-item-trashed h1,
         [is=listling-item].listling-item-mode-edit h1,
-        listling-list-page.listling-list-presentation [is=listling-item] h1 {
+        listling-list-page.listling-list-presentation [is=listling-item] h1,
+        listling-list-page:not(.listling-list-can-modify) [is=listling-item] h1 {
             padding-left: calc(1.5em / 4);
         }
 
@@ -713,12 +715,16 @@
         [is=listling-item]:not(.listling-item-mode-view) .listling-item-mode-view,
         [is=listling-item]:not(.listling-item-mode-edit) .listling-item-mode-edit,
         listling-list-page.listling-list-presentation .listling-item-menu,
-        listling-list-page.listling-list-presentation [is=listling-item] .micro-ol-handle,
+        listling-list-page.listling-list-presentation .micro-ol-handle,
+        listling-list-page:not(.listling-list-can-modify) .micro-ol-handle,
         [is=listling-item].listling-item-trashed .micro-ol-handle,
         listling-list-page:not(.listling-list-feature-check) .listling-item-check,
         listling-list-page:not(.listling-list-feature-check) .listling-item-uncheck,
-        listling-list-page:not(.listling-list-feature-playlist) .listling-item-play,
+        [is=listling-item]:not(.listling-item-can-modify) .listling-item-restore,
         [is=listling-item]:not(.listling-item-trashed) .listling-item-restore,
+        listling-list-page:not(.listling-list-feature-playlist) .listling-item-play,
+        [is=listling-item]:not(.listling-item-can-modify) .listling-item-edit,
+        [is=listling-item]:not(.listling-item-can-modify) .listling-item-trash,
         [is=listling-item].listling-item-trashed .listling-item-menu li:last-child,
         body:not(.micro-ui-map-service-enabled) .listling-item-meta,
         listling-list-page:not(.listling-list-feature-location) .listling-item-meta,
