--- a/client/index.html
+++ b/client/index.html
@@ -591,7 +591,7 @@
                 <p class="listling-item-mode-view micro-multiline" data-content="item.text"></p>
                 <label class="listling-item-mode-edit">
                     <textarea name="text" placeholder="Text (optional)"
-                              data-value="or item.text ''">
+                              data-value="or item.text ''" data-onblur="onBlur">
                     </textarea>
                     <small></small>
                     <small>Attach additional content like images, … by inserting a link.</small>
