--- a/client/index.html
+++ b/client/index.html
@@ -394,7 +394,7 @@
         <footer>
             <div class="micro-panel micro-ui-inside">
                 <p data-content="switch shortUrl">
-                    <template><strong>Participate at <span data-content="shortUrl"></span></strong></template>
+                    <template><strong>Post stuff at <span data-content="shortUrl"></span></strong></template>
                     <template><span data-content="lst.title"></span></template>
                 </p>
                 <p class="listling-list-idle-info">
