Quick fix scrolling to images in playlist

--- a/client/index.html
+++ b/client/index.html
@@ -410,6 +410,11 @@
         </footer>
     </template>
     <style>
+        listling-list-page.listling-list-presentation {
+            display: block;
+            padding-bottom: 100vh;
+        }
+
         body:not(.micro-feature-es6-typed-array) .listling-list-edit,
         body:not(.micro-feature-service-workers) .listling-list-edit,
         body:not(.micro-feature-push) .listling-list-edit {
