Embed video content
Therefor update micro.

Close #36.

--- a/client/index.html
+++ b/client/index.html
@@ -501,7 +501,9 @@
                               data-value="or item.text ''">
                     </textarea>
                     <small></small>
-                    <small>Attach additional content like images, … by inserting a link.</small>
+                    <small>
+                        Attach additional content like images, videos, … by inserting a link.
+                    </small>
                 </label>
 
                 <p class="listling-detail listling-item-mode-view" title="Edited by">
@@ -608,6 +610,7 @@
 
         .listling-item-resource > * {
             display: block;
+            width: auto;
         }
 
         [is=listling-item].listling-item-mode-edit .listling-item-meta {
