Permanently delete trashed items
For this, update to micro 0.33 and also to ESLint 5.15.

Breaking changes:

* Let Event.object be Gone if the object does not exist anymore
* Update to micro 0.33

Close #40 and fix #39.

--- a/client/index.html
+++ b/client/index.html
@@ -325,6 +325,10 @@
                         <i class="fa fa-search-minus"></i>
                     </button>
                 </header>
+                <p class="micro-small">
+                    <i class="fa fa-hourglass-half"></i> Trashed items are permanently deleted after
+                    7 days.
+                </p>
                 <ul class="listling-list-trashed-items" data-content="list trashedItems 'item'">
                     <template>
                         <li is="listling-item" class="micro-quick-nav" data-item="item"></li>
