--- a/client/index.html
+++ b/client/index.html
@@ -183,15 +183,18 @@
                 </h1>
                 <ul is="micro-menu" class="listling-list-menu listling-list-mode-view">
                     <li>
-                        <button is="micro-button" type="button" class="listling-list-edit action"
-                                data-run="startEdit" data-shortcut="new Shortcut 'E'">
-                            <i class="fa fa-pencil-alt"></i> Edit
-                        </button>
-                    </li>
-                    <li>
                         <button type="button" class="link"><i class="fa fa-fw fa-bars"></i></button>
                         <ul is="micro-menu">
-                            <li data-content="switch lst.activity.user_subscribed">
+                            <li class="listling-list-edit">
+                                <button is="micro-button" type="button" class="action"
+                                        data-run="startEdit" data-shortcut="new Shortcut 'E'">
+                                    <i class="fa fa-pencil-alt"></i> Edit
+                                </button>
+                            </li>
+                            <li
+                                class="listling-list-subscribe"
+                                data-content="switch lst.activity.user_subscribed"
+                            >
                                 <template>
                                     <button
                                         is="micro-button"
@@ -260,6 +263,7 @@
                             </li>
                         </ul>
                     </header>
+
                     <fieldset>
                         <legend>Features</legend>
                         <label>
@@ -275,6 +279,29 @@
                             Item location
                         </label>
                     </fieldset>
+
+                    <label>
+                        List mode
+                        <input
+                            name="mode" readonly="readonly" data-value="modeToText lst.mode"
+                            data-value-as-object="lst.mode"
+                        />
+                        <micro-options data-options="modes" data-to-text="bind modeToText null">
+                            <template>
+                                <p>
+                                    <span data-content="toText option"></span>
+                                    <small data-content="switch option 'collaborate' 'view'">
+                                        <template>
+                                            Users collaborate on the list. They can edit everything.
+                                        </template>
+                                        <template>
+                                            Users view the list. They cannot edit anything.
+                                        </template>
+                                    </small>
+                                </p>
+                            </template>
+                        </micro-options>
+                    </label>
                 </section>
             </div>
 
@@ -349,13 +376,6 @@
         </div>
     </template>
     <style>
-        body:not(.micro-feature-es6-typed-array) .listling-list-edit,
-        body:not(.micro-feature-service-workers) .listling-list-edit,
-        body:not(.micro-feature-push) .listling-list-edit {
-            border-top-right-radius: calc(1.5em / 4);
-            border-bottom-right-radius: calc(1.5em / 4);
-        }
-
         .listling-list-items,
         .listling-list-trashed-items {
             padding: 0;
@@ -370,13 +390,15 @@
 
         listling-list-page:not(.listling-list-mode-view) .listling-list-mode-view,
         listling-list-page:not(.listling-list-mode-edit) .listling-list-mode-edit,
-        body:not(.micro-feature-es6-typed-array) .listling-list-menu li:last-child,
-        body:not(.micro-feature-service-workers) .listling-list-menu li:last-child,
-        body:not(.micro-feature-push) .listling-list-menu li:last-child,
+        listling-list-page:not(.listling-list-may-modify) .listling-list-edit,
+        body:not(.micro-feature-es6-typed-array) .listling-list-subscribe,
+        body:not(.micro-feature-service-workers) .listling-list-subscribe,
+        body:not(.micro-feature-push) .listling-list-subscribe,
         body:not(.micro-ui-map-service-enabled) .listling-list-features-location,
         listling-list-page:not(.listling-list-has-trashed-items) .listling-list-trash,
         .listling-list-trash.listling-list-trash-expanded > p,
         .listling-list-trash:not(.listling-list-trash-expanded) > div,
+        listling-list-page:not(.listling-list-may-modify) .listling-list-create-item,
         .listling-list-create-item.listling-list-creating-item > p,
         .listling-list-create-item:not(.listling-list-creating-item) > li,
         .listling-list-settings.listling-list-settings-expanded > p,
@@ -387,43 +409,31 @@
 
     <template class="listling-item-template">
         <form>
-            <header>
+            <header class="micro-panel">
                 <div class="micro-ol-handle listling-item-mode-view"
                      title="Move (⌨ Alt + ↑ / Alt + ↓)" tabindex="0">
                 </div>
 
-                <ul is="micro-menu" class="micro-secondary listling-item-mode-view"
-                    data-content="switch item.checked"
-                >
+                <div class="listling-item-mode-view" data-content="switch item.checked">
                     <template>
-                        <li class="listling-item-uncheck">
-                            <button
-                                is="micro-button"
-                                type="button"
-                                class="action"
-                                data-run="uncheck"
-                                data-disabled="item.trashed"
-                                data-shortcut="new Shortcut 'X' 'Uncheck'"
-                            >
-                                <i class="fa fa-fw fa-check-square"></i>
-                            </button>
-                        </li>
+                        <button
+                            is="micro-button" type="button" class="listling-item-uncheck action"
+                            data-run="uncheck" data-disabled="isCheckDisabled item.trashed lst.mode"
+                            data-shortcut="new Shortcut 'X' 'Uncheck'"
+                        >
+                            <i class="fa fa-fw fa-check-square"></i>
+                        </button>
                     </template>
                     <template>
-                        <li class="listling-item-check">
-                            <button
-                                is="micro-button"
-                                type="button"
-                                class="action"
-                                data-run="check"
-                                data-disabled="item.trashed"
-                                data-shortcut="new Shortcut 'X' 'Check'"
-                            >
-                                <i class="far fa-fw fa-square"></i>
-                            </button>
-                        </li>
+                        <button
+                            is="micro-button" type="button" class="listling-item-check action"
+                            data-run="check" data-disabled="isCheckDisabled item.trashed lst.mode"
+                            data-shortcut="new Shortcut 'X' 'Check'"
+                        >
+                            <i class="far fa-fw fa-square"></i>
+                        </button>
                     </template>
-                </ul>
+                </div>
 
                 <h1>
                     <span class="listling-item-mode-view" data-content="item.title"></span>
@@ -435,9 +445,9 @@
                 <ul is="micro-menu"
                     class="listling-item-menu micro-secondary listling-item-mode-view"
                 >
-                    <li>
-                        <button is="micro-button" type="button" class="listling-item-restore action"
-                                data-run="restore" data-shortcut="new Shortcut 'R'">
+                    <li class="listling-item-restore">
+                        <button is="micro-button" type="button" class="action" data-run="restore"
+                                data-shortcut="new Shortcut 'R'">
                             <i class="fa fa-undo"></i> Restore
                         </button>
                     </li>
@@ -446,22 +456,22 @@
                             <i class="fa fa-fw fa-bars"></i>
                         </button>
                         <ul is="micro-menu">
-                            <li>
+                            <li class="listling-item-edit">
                                 <button
                                     is="micro-button"
                                     type="button"
-                                    class="listling-item-edit action"
+                                    class="action"
                                     data-run="startEdit"
                                     data-shortcut="new Shortcut 'E'"
                                 >
                                     <i class="fa fa-pencil-alt"></i> Edit
                                 </button>
                             </li>
-                            <li>
+                            <li class="listling-item-trash">
                                 <button
                                     is="micro-button"
                                     type="button"
-                                    class="listling-item-trash action"
+                                    class="action"
                                     data-run="trash"
                                     data-shortcut="new Shortcut 'T'"
                                 >
@@ -554,36 +564,34 @@
             padding: calc(1.5em / 4);
             width: calc(1.5em / 2 + 1.5em / 2);
             height: calc(1.5em + 1.5em / 2);
-            background: radial-gradient(circle closest-side, #888 0%, #888 50%, transparent 50%)
-                        content-box 0 0 / calc(1.5rem / 4) calc(1.5rem / 4);
+            background:
+                radial-gradient(circle closest-side, #888 0%, #888 50%, transparent 50%) content-box
+                    0 0 / calc(1.5rem / 4) calc(1.5rem / 4);
         }
 
-        [is=micro-menu].micro-secondary > li.listling-item-check > .action,
-        [is=listling-item].listling-item-trashed [is=micro-menu].micro-secondary > li.listling-item-uncheck > .action {
+        [is=listling-item] .micro-panel > .micro-ol-handle:focus,
+        [is=listling-item] .micro-panel > .micro-ol-handle:not(:disabled):hover {
+            background:
+                radial-gradient(circle closest-side, #888 0%, #888 50%, transparent 50%) content-box
+                    0 0 / calc(1.5rem / 4) calc(1.5rem / 4),
+                var(--micro-color-delimiter);
+        }
+
+        .micro-panel > div > .listling-item-check,
+        [is=listling-item].listling-item-trashed .micro-panel > div > .listling-item-uncheck {
             color: var(--micro-color-border);
         }
 
-        [is=micro-menu].micro-secondary > li.listling-item-uncheck > .action {
+        .micro-panel > div > .listling-item-uncheck {
             color: forestgreen;
         }
 
         [is=listling-item] h1 {
-            font-size: 1em;
             font-weight: bold;
-            padding: calc(1.5em / 4) 0;
         }
 
         [is=listling-item].listling-item-trashed h1 {
             color: inherit;
-        }
-
-        listling-list-page:not(.listling-list-feature-check) [is=listling-item].listling-item-trashed h1,
-        [is=listling-item].listling-item-mode-edit h1 {
-            padding-left: calc(1.5em / 4);
-        }
-
-        [is=listling-item].listling-item-mode-edit h1 {
-            padding-right: calc(1.5em / 4);
         }
 
         [is=listling-item] h1 > label {
@@ -624,8 +632,10 @@
         [is=listling-item]:not(.listling-item-mode-view) .listling-item-mode-view,
         [is=listling-item]:not(.listling-item-mode-edit) .listling-item-mode-edit,
         [is=listling-item].listling-item-trashed .micro-ol-handle,
+        listling-list-page:not(.listling-list-may-modify) .micro-ol-handle,
         listling-list-page:not(.listling-list-feature-check) .listling-item-check,
         listling-list-page:not(.listling-list-feature-check) .listling-item-uncheck,
+        [is=listling-item]:not(.listling-item-may-modify) .listling-item-menu,
         [is=listling-item]:not(.listling-item-trashed) .listling-item-restore,
         [is=listling-item].listling-item-trashed .listling-item-menu li:last-child,
         body:not(.micro-ui-map-service-enabled) .listling-item-meta,
